@@ -18,6 +18,8 @@ import org.gridsuite.modification.NetworkModificationException;
 import org.gridsuite.modification.dto.CompositeModificationInfos;
 import org.gridsuite.modification.dto.EquipmentAttributeModificationInfos;
 import org.gridsuite.modification.dto.ModificationInfos;
+import org.gridsuite.modification.dto.ModificationReferenceInfos;
+import org.gridsuite.modification.server.dto.CompositesToBeInserted;
 import org.gridsuite.modification.server.dto.NetworkModificationResult;
 import org.gridsuite.modification.server.dto.NetworkModificationsResult;
 import org.gridsuite.modification.server.entities.CompositeModificationEntity;
@@ -34,7 +36,6 @@ import org.mockito.stubbing.Answer;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.data.util.Pair;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
@@ -166,8 +167,8 @@ class CompositeControllerTest {
         checkCompositeModificationContent(compositeModificationContent);
 
         // Insert the composite modification in the group
-        final String bodyJson = getJsonBodyModificationCompositeInfos(
-                List.of(Pair.of(compositeModificationUuid, "random name")));
+        final String bodyJson = getJsonBodyModificationCompositeToBeInserted(
+                List.of(new CompositesToBeInserted(compositeModificationUuid, "random name", false)));
         mvcResult = runRequestAsync(
                 mockMvc,
                 put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/" + TEST_GROUP_ID + "?action=SPLIT")
@@ -202,8 +203,8 @@ class CompositeControllerTest {
         assertEquals(modificationsNumber, modificationInfosList.size());
 
         // Insert the composite modification in the group
-        final String bodyJson = getJsonBodyModificationCompositeInfos(
-                List.of(Pair.of(compositeModificationUuid, "random name")));
+        final String bodyJson = getJsonBodyModificationCompositeToBeInserted(
+                List.of(new CompositesToBeInserted(compositeModificationUuid, "random name", false)));
 
         // insert the same composite modification inside as a complete composite, not split into regular network modifications
         mvcResult = runRequestAsync(
@@ -218,6 +219,48 @@ class CompositeControllerTest {
                 modificationInfos.getType().equals(COMPOSITE_MODIFICATION)).findFirst().orElseThrow();
         assertNotNull(insertedComposite);
         checkCompositeModificationContent(insertedComposite.getModificationsInfos());
+    }
+
+    @Test
+    void testInsertSharedComposite() throws Exception {
+        int modificationsNumber = 2;
+        List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, modificationsNumber);
+
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+                        .content(mapper.writeValueAsString(modificationList.stream().map(ModificationInfos::getUuid).toList()))
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andReturn();
+        UUID compositeModificationUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
+
+        String bodyJson = getJsonBodyModificationCompositeToBeInserted(
+                List.of(new CompositesToBeInserted(compositeModificationUuid, "shared composite", true)));
+
+        mvcResult = runRequestAsync(
+                mockMvc,
+                put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/" + TEST_GROUP_ID + "?action=INSERT")
+                        .content(bodyJson)
+                        .contentType(MediaType.APPLICATION_JSON),
+                status().isOk());
+
+        assertApplicationStatusOK(mvcResult);
+
+        List<ModificationInfos> newModificationList = modificationRepository.getModifications(TEST_GROUP_ID, false, true);
+        assertEquals(modificationsNumber + 1, newModificationList.size());
+
+        ModificationReferenceInfos insertedReference = assertInstanceOf(
+                ModificationReferenceInfos.class,
+                newModificationList.getLast()
+        );
+        assertEquals(compositeModificationUuid, insertedReference.getReferenceId());
+        assertEquals(ModificationReferenceInfos.Type.BASIC, insertedReference.getReferenceType());
+
+        CompositeModificationInfos referencedComposite = assertInstanceOf(
+                CompositeModificationInfos.class,
+                insertedReference.getReferenceInfos()
+        );
+        assertEquals(compositeModificationUuid, referencedComposite.getUuid());
+        checkCompositeModificationContent(referencedComposite.getModificationsInfos());
     }
 
     private static void checkCompositeModificationContent(List<ModificationInfos> compositeModificationContent) {
@@ -246,7 +289,7 @@ class CompositeControllerTest {
         return modificationList;
     }
 
-    private String getJsonBodyModificationCompositeInfos(List<Pair<UUID, String>> modifs) throws JsonProcessingException {
+    private String getJsonBodyModificationCompositeToBeInserted(List<CompositesToBeInserted> modifs) throws JsonProcessingException {
         return TestUtils.getJsonBodyModificationCompositeInfos(modifs, TEST_NETWORK_ID, VARIANT_ID);
     }
 
@@ -398,7 +441,7 @@ class CompositeControllerTest {
         // Move the first sub-modification to the end (no beforeUuid = append)
         // was [0,1,2] → [1,2,0]
         mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}/sub-modifications/{modificationUuid}",
-                        TEST_GROUP_ID, subUuids.get(0))
+                        TEST_GROUP_ID, subUuids.getFirst())
                         .queryParam("sourceCompositeUuid", compositeUuid.toString())
                         .queryParam("targetCompositeUuid", compositeUuid.toString()))
                 .andExpect(status().isOk());
@@ -445,7 +488,8 @@ class CompositeControllerTest {
 
         runRequestAsync(mockMvc,
                 put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}?action=INSERT", TEST_GROUP_ID)
-                        .content(getJsonBodyModificationCompositeInfos(List.of(Pair.of(compositeUuid, "composite"))))
+                        .content(getJsonBodyModificationCompositeToBeInserted(
+                                List.of(new CompositesToBeInserted(compositeUuid, "composite", false))))
                         .contentType(MediaType.APPLICATION_JSON),
                 status().isOk());
 
@@ -460,7 +504,7 @@ class CompositeControllerTest {
         int rootSizeBefore = modificationRepository.getModifications(TEST_GROUP_ID, true, true).size();
 
         // Move first sub-modification from composite to root level (no targetCompositeUuid)
-        UUID movingUuid = actualSubUuids.get(0);
+        UUID movingUuid = actualSubUuids.getFirst();
         mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}/sub-modifications/{modificationUuid}",
                         TEST_GROUP_ID, movingUuid)
                         .queryParam("sourceCompositeUuid", compositeUuid.toString()))
@@ -472,7 +516,7 @@ class CompositeControllerTest {
                         .andExpect(status().isOk()).andReturn().getResponse().getContentAsString(),
                 new TypeReference<>() { });
         assertEquals(1, resultMap.get(compositeUuid).size());
-        assertEquals(actualSubUuids.get(1), resultMap.get(compositeUuid).get(0).getUuid());
+        assertEquals(actualSubUuids.get(1), resultMap.get(compositeUuid).getFirst().getUuid());
 
         // Root group should have one more modification
         assertEquals(rootSizeBefore + 1, modificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
@@ -596,7 +640,7 @@ class CompositeControllerTest {
         assertEquals(2, actualInnerSubUuids.size());
 
         List<ModificationInfos> outerLeafs = createSomeSwitchModifications(TEST_GROUP2_ID, 1);
-        UUID leaf3RootUuid = outerLeafs.get(0).getUuid();
+        UUID leaf3RootUuid = outerLeafs.getFirst().getUuid();
 
         mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
                         .content(mapper.writeValueAsString(List.of(innerCompositeUuid, leaf3RootUuid))).contentType(MediaType.APPLICATION_JSON))
@@ -657,7 +701,7 @@ class CompositeControllerTest {
 
         runRequestAsync(mockMvc,
                 put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}?action=INSERT", TEST_GROUP_ID)
-                        .content(getJsonBodyModificationCompositeInfos(List.of(Pair.of(compositeUuid, "composite"))))
+                        .content(getJsonBodyModificationCompositeToBeInserted(List.of(new CompositesToBeInserted(compositeUuid, "composite", false))))
                         .contentType(MediaType.APPLICATION_JSON),
                 status().isOk());
 
@@ -720,7 +764,7 @@ class CompositeControllerTest {
         UUID composite1Uuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
         List<ModificationInfos> extraLeafs = createSomeSwitchModifications(TEST_GROUP2_ID, 1);
-        UUID leaf4Uuid = extraLeafs.get(0).getUuid();
+        UUID leaf4Uuid = extraLeafs.getFirst().getUuid();
 
         mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
                         .content(mapper.writeValueAsString(List.of(composite1Uuid, leaf4Uuid))).contentType(MediaType.APPLICATION_JSON))
